--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,1 +1,62 @@
 @charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color: darkgray;
+    
+}
+
+header{
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding-top: 50px;
+    
+}
+header>h1{
+    font-variant: small-caps;
+}
+header>p{
+    padding-bottom: 50px;
+
+}
+section {
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    padding-top: 10vh;
+    line-height: 2em;
+}
+.imagem>p {
+    background-color: rgba(0, 0, 0, 0.356);
+    width: 400px;
+}
+
+.normal {
+    color: black;
+    background-color: white;
+}
+
+.imagem{
+    color: white;
+    background-color: rgb(43, 41, 41);
+}
+
+
+a, footer a{
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+}
+a:hover,footer a:hover{
+    text-decoration: underline;
+}
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
