--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2:"passion one";
+    --font3:"Sriracha";
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -7,7 +19,7 @@
 
 body{
     background-color: darkgray;
-    
+    font-family: var(--fonte1);
 }
 
 header{
@@ -19,9 +31,12 @@ header{
 }
 header>h1{
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 5vw;
 }
 header>p{
     padding-bottom: 50px;
+    font-size: 14px;
 
 }
 section {
@@ -29,10 +44,19 @@ section {
     padding-left: 30px;
     padding-top: 10vh;
     line-height: 2em;
+    font-family: var(--font3);
+    font-size: 3vw;
+    
 }
+section.p {
+    padding-bottom: 2em;
+}
+
+
 .imagem>p {
     background-color: rgba(0, 0, 0, 0.356);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 .normal {
@@ -43,6 +67,8 @@ section {
 .imagem{
     color: white;
     background-color: rgb(43, 41, 41);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-attachment: fixed;
 }
 
 
@@ -53,6 +79,15 @@ a, footer a{
 }
 a:hover,footer a:hover{
     text-decoration: underline;
+}
+#img1{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+#img2{
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
 }
 footer{
     text-align: center;
