--- a/exercicios/026/mq004/estilos/media-query.css
+++ b/exercicios/026/mq004/estilos/media-query.css
@@ -17,7 +17,7 @@ tvs : 1200px acima
 }
 @media screen and (min-widht: 769px)and (max-widht: 992px){
     body{
-        background-image: url(../imagens/back-tablet.jpg);
+        background-image:url(../imagens/back-tablet.jpg);
     }
     #cell {display: none;}
     #tablet{display:block}
@@ -31,7 +31,7 @@ tvs : 1200px acima
 
 @media screen and (min-widht:992px)and (max-widht:1200px){
     body{
-        background: black url(../imagens/back-pc.jpg);
+        background-image: url(../imagens/back-pc.jpg);
     }
     #cell {display: none;}
 #tablet{display: none;
