--- a/exercicios/flexbox013-menu/mobile.css
+++ b/exercicios/flexbox013-menu/mobile.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
-body{
-    background-color: aqua;
+  header,header>nav {
+
+    flex-flow:column nowrap;
+
 }
+header>h1 {
+    flex-basis: 50px;
+}
+nav > a{
+    width: 95vw;
+}
+.burguer{
+    display: block;
+}
+
